<resources>
    <string name="app_name">SmartClaimsExpert</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="SmartsClaims">Smart Claims</string>
    <string name="Bienvenue">Bienvenue expert</string>
    <string name="Enligne">En ligne</string>
    <string name="DashboardExpert">Dashboard Expert</string>
    <string name="Expertise">Expertise planifié avec succés</string>
    <string name="DemandeAqcuisition">Merci de Déposer le rapport d\'expertise ou de remplir le formulaire smart claim</string>
    <string name="Envoyer">Envoyer</string>
    <string name="Confirmer">Confirmer</string>
    <string name="Type">Type de l\'accident</string>
    <string name="Montant">Montant</string>
    <string name="TypeExpertise">Type de l\'expertise</string>
    <string name="FeuReparation">Autoriser la réparation</string>
    <string name="Collision">Collision</string>
    <string name="Impact">Impact</string>
    <string name="Filtre">Filtre</string>
    <string name="Tri">Tri</string>
    <string name="Autre">Autre</string>
    <string name="Commencer">Commencer la visio expertise</string>
    <string name="Attente">En attente de la facture</string>
    <string name="PlanifierSuivi">Planifier le visio suivi</string>
    <string name="CommencerSuivi">Commencer le visio suivi</string>
    <string name="Lieu">Lieu de l\'accident</string>
    <string name="Scan"> Constat et attestation d\’assurance</string>
    <string name="Facture">Facture</string>
    <string name="Video">Video de l\'expertise</string>
    <string name="VideoDegat">Video de l\'accident</string>
    <string name="Profil">Profil</string>
    <string name="Valide">Valide</string>
    <string name="Securite">Securite</string>
    <string name="Informations">Informations personnelles</string>
    <string name="Deconnection">Deconnection</string>
    <string name="Suivi">Video du suivi</string>
    <string name="Rapport">Rapport de l\'expertise</string>
    <string name="Nom">Nom et prénom</string>
    <string name="Pieces">Pièces jointes</string>
    <string name="Accord">Accord avec</string>
    <string name="Mandant">Mandant</string>
    <string name="DateExamen">DateExamen</string>
    <string name="DateAcc">Date d\'accident</string>
    <string name="VehExp">Veh expertise</string>
    <string name="Expert">Expert</string>
    <string name="Point">Point de choc</string>
    <string name="V">V %</string>
    <string name="Designation">Désignation des fournitures</string>
    <string name="Nature">Nature des chocs des dégats</string>
    <string name="Estimation">Estimation des travaux</string>
    <string name="Sous">(Sous resevre des garanties de responsabilité)</string>
    <string name="Ref">Référence de l\'expert</string>
    <string name="Assure">Assuré</string>
    <string name="Lieu2">Lieu</string>
    <string name="Date">Date mission</string>
    <string name="Immatriculation">Immatriculation</string>
    <string name="Observation">Observation</string>
    <string name="Addresse">Addresse</string>
    <string name="Contrat">Contrat</string>
    <string name="Type2">Type</string>

    <string name="Marque">Marque</string>
    <string name="Tel">Tel</string>
    <string name="Numero">N Dossier</string>
    <string name="Puiss">Puiss</string>
    <string name="Index">Index K</string>
    <string name="Fax">Fax</string>
    <string name="Tier">Tier</string>
    <string name="Couleur">Couleur</string>
    <string name="Genre">Genre</string>
    <string name="Veh">Veh. Tier</string>
    <string name="etat">Etat. Veh</string>
    <string name="Immob">Immob</string>
    <string name="Dos">Dos</string>
    <string name="VN">VN</string>
    <string name="VV">VV</string>
    <string name="Cont">Cont</string>
    <string name="Chassis">N de chassis</string>
    <string name="date1er">Date 1 er MC</string>
    <string name="Cie">Cie Adverse</string>
    <string name="Circonstance">Circonstance</string>
    <string name="Photos">Veuillez choisir un rendez vous pour la visio expertise</string>

    <string name="Degats">Photos du dégat</string>
    <string name="NbDossiers">Nombre de dossiers</string>
    <string name="Compagnie">Compagnie d\'assurance</string>
    <string name="Planifier">Planifier la vidéo expertise</string>
    <string name="Faire">Commencer l\'expertise</string>
    <string name="Poursuivre">Poursuivre l\'expertise</string>
    <string name="VisioExpertise">Visio-Expertise</string>
    <string name="Oui">Oui</string>
    <string name="Non">Non</string>
    <string name="VisioTerrain">Expertise sur terrain</string>
    <string name="Cancel">Annuler</string>
    <string name="Suivant">Suivant</string>
    <string name="Formulaire">Formulaire Smart Claim</string>
    <string name="PasdeVideo">Pas de video pour le moment</string>
    <string name="Note">Note</string>
    <string name="Valider">Valider</string>
    <string name="Jours">Jours</string>
    <string name="Heures">Heures</string>
    <string name="Minutes">Minutes</string>
    <string name="Secondes">Secondes</string>
    <string name="Dossiers">Dossiers</string>
    <string name="Notification">Notification Push</string>
    <string name="Dark">Dark Mode</string>
    <string name="Langue">Langue</string>
    <string name="FAQ">FAQ</string>
    <string name="Parametres">Parametres</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAPTNg63-NFTlo2x2oKJyky6o4_ZAacHYA</string>
    <string-array name="filtre_list">
        <item>En attente de confirmation</item>
        <item>En cours de traitement</item>
        <item>Validé</item>
    </string-array>
    <string-array name="tri_spinner">
        <item>Nom</item>
        <item>Date</item>
    </string-array>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>