<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.marouenekhadhraoui.smartclaimsexpert.ui.videovisio.VideoVisioViewModel" />
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnVisio"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_se_connecter"
                    android:text="@string/Planifier"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_video"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"

                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/ic_icon_material_videocam"
                    app:layout_constraintEnd_toStartOf="@+id/txt_video"
                    app:layout_constraintTop_toBottomOf="@+id/btnVisio" />



                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_video"
                    style="@style/AssureNomText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/Video"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnVisio" />

                <cn.jzvd.JzvdStd
                    android:id="@+id/jz_video"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_video"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_videoSuivi"
                    style="@style/AssureNomText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/Suivi"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/jz_video" />
                <cn.jzvd.JzvdStd
                    android:id="@+id/jz_videoSuivi"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_videoSuivi"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_facture"
                    style="@style/AssureNomText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/Rapport"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/jz_videoSuivi" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="60dp"
                    android:layout_marginRight="60dp"
                    app:strokeColor="@color/greylight"
                    app:strokeWidth="1dp"
                     android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_facture">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/img_facture"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:visibility="invisible"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="32dp"
                            android:src="@drawable/ic_icon_material_videocam"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textFactureSmart" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/textFactureSmart"
                            style="@style/AssureNomText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="32dp"
                            android:layout_marginLeft="32dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="32dp"
                            android:layout_marginRight="32dp"
                            android:text="@string/Formulaire"
                            android:visibility="invisible"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">


                        </androidx.appcompat.widget.AppCompatTextView>

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textVideo"
                    style="@style/DashboardText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:text="@string/PasdeVideo"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_video" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnValider"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginBottom="32dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_se_connecter"
                    android:text="@string/Valider"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />




            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>
    </FrameLayout>
</layout>